src/style/CSS/style.css
/* General settings */

:root {
    --primary-color: #4B565D;
    --alt-color: #2A3439;
    --bg-color: #D4DEE6;
}

:target {
    scroll-margin-top: 240px;
}

div#root {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    min-width: 400px;
    max-width: 1600px;
    margin: auto;
    font-family: 'Roboto', sans-serif;
}

.main {
    margin-top: 240px;
    flex: 1;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.section {
    width: 100%;
    padding: 40px 50px;
}

.section:nth-child(odd) {
    background-color: var(--bg-color);
    border-radius: 10px;
}

.section-title {
    width: fit-content;
    padding: 10px 50px;
    border-radius: 10px;
    background-color: var(--primary-color);
    color: white;
    font-size: 1.6rem;
    font-weight: 700;
    margin-bottom: 20px;
}

.main-button {
    padding: 10px;
    background-color: rgba(255, 255, 255, 0.6);
    border: 2px solid var(--primary-color);
    color: var(--primary-color);
    font-size: 1.2rem;
    font-weight: 500;
    border-radius: 10px;
    transition: transform 400ms;
}

.main-button:hover {
    transform: scale(1.1);
}

a {
    color: inherit;
    text-decoration: none;
}

/* Header component */

.header {
    position: fixed;
    top: 0;
    width: 100%;
    max-width: 1600px;
    z-index: 10;
    border-radius: 0 0 10px 10px;
    display: grid;
    row-gap: 10px;
    grid-template-columns: 1fr auto 1fr;
    grid-template-rows: auto auto;
    text-align: center;
    align-items: center;
    padding: 20px 50px;
    background-color: white;
    background-image: url("../../assets/images/dev_banner.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: bottom;
}

.header__main-title {
    grid-row: 1 / 2;
    grid-column: 2 / 3;
    padding: 20px 40px;
    border: 2px solid var(--primary-color);
    border-radius: 10px;
    background-color: rgba(255, 255, 255, 0.6);
    color: var(--primary-color);
    font-weight: 700;
    font-size: 1.4rem;
}

.header__main-title h1 {
    margin-bottom: 10px;
}

.header__networking {
    grid-row: 1 / 3;
    grid-column: 3 / 4;
    justify-self: end;
    background-color: rgba(255, 255, 255, 0.6);
    border: 2px solid var(--primary-color);
    border-radius: 10px;
    padding: 15px;
    font-size: 1.5rem;
}

.header__networking ul {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    row-gap: 15px;
}

.header__networking a {
    display: block;
    height: 1.5rem;
    transition: transform 400ms;
}

.header__networking a:hover {
    transform: scale(1.1);
}

.li-logo {
    color: #0077b5;
}

.pdf-logo {
    color: red;
}

.header__nav {
    grid-row: 2 / 3;
    grid-column: 1 / 4;
}

.header__nav ul {
    display: flex;
    justify-content: center;
    column-gap: 60px;
}

.burger-menu {
    display: none;
}

/* WhoAmI component */

.introduction {
    display: flex;
    align-items: center;
    column-gap: 20px;
}

.introduction__profile-pic {
    width: 200px;
    aspect-ratio: 0.636;
}

.introduction__profile-pic img {
    border-radius: 10px;
    height: 100%;
    object-fit: cover;
}

.introduction__text {
    display: flex;
    flex-direction: column;
    row-gap: 10px;
    font-size: 1.2rem;
}

.introduction__cv {
    margin-top: 25px;
    align-self: center;
}

/* MyProjectsSection component */

.projects-container {
    display: flex;
    flex-direction: column;
    row-gap: 40px;
}

/* ProjectView component */

.project {
    display: flex;
    align-items: center;
    column-gap: 40px;
}

.project__image {
    width: 300px;
    aspect-ratio: 2.083;
}

.project__image img {
    height: 100%;
    object-fit: cover;
    border: 1px solid var(--bg-color);
    border-radius: 10px;
}

.project__details {
    display: flex;
    flex-direction: column;
    row-gap: 10px;
    font-size: 1.2rem;
}

.project__details svg {
    vertical-align: middle;
    font-size: 1.4rem;
}

.project__details a {
    display: inline-block;
    vertical-align: middle;
    max-width: 400px;
    overflow: hidden;
    text-wrap: nowrap;
    text-overflow: ellipsis;
}

.project__details h4,
#section-my-skills h4 {
    font-size: 1.4rem;
    color: var(--primary-color);
}

/* MySkillsSection component */

.skills-container {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    row-gap: 40px;
    margin: 40px 0;
}

/* SkillView component */

.skill {
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 10px;
}

.skill__logo {
    width: 70px;
    height: 70px;
}

.skill__logo img {
    height: 100%;
    width: 100%;
}

.skill h5 {
    font-size: 1.3rem;
    font-weight: 500;
}

/* ContactSection component */

.contact-methods {
    display: flex;
    flex-direction: column;
    align-items: center;
    row-gap: 20px;
}

.message-form {
    margin-top: 40px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

.message-form h4 {
    font-size: 1.3rem;
    color: var(--primary-color);
}

.message-form__input {
    display: flex;
    flex-direction: column;
    gap: 5px;
    width: 100%;
}

.message-form__input label {
    font-size: 1.1rem;
    font-weight: 500;
}

.message-form__input input,
.message-form__input textarea {
    border-radius: 5px;
    border: solid 2px black;
    padding: 5px;
}

/* Footer component */

.footer {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100px;
    background-color: var(--alt-color);
    border-radius: 10px 10px 0 0;
}

.footer__container {
    border: 1px solid var(--bg-color);
    padding: 8px;
    border-radius: 10px;
    color: rgba(255, 255, 255, 0.8);
    color: var(--bg-color);
    font-size: 0.9rem;
    font-weight: 400;
}

/* Media queries */

/* Tablet */

@media (max-width: 992px) {
    /* General settings */

    :target {
        scroll-margin-top: 303px;
    }

    .main {
        margin-top: 303px;
    }

    .section {
        padding: 30px 40px;
    }

    /* Header component */

    .header {
        padding: 20px 40px;
        grid-template-rows: auto auto auto;
    }

    .header__main-title {
        grid-row: 2 / 3;
    }

    .header__main-title h1 {
        margin-bottom: 5px;
    }

    .header__networking {
        grid-row: 1 / 2;
        grid-column: 1 / 4;
        justify-self: center;
    }

    .header__networking ul {
        flex-direction: row;
        row-gap: unset;
        column-gap: 60px;
    }

    .header__nav {
        grid-row: 3 / 4;
    }

    .header__nav ul {
        column-gap: 20px;
    }

    /* ProjectView component */

    .project {
        flex-direction: column;
        column-gap: unset;
        row-gap: 40px;
    }

    .project__image {
        width: 70%;
    }

    .project__image img {
        width: 100%;
        height: auto;
    }
}

/* Mobile */

@media (max-width: 768px) {
    /* General settings */

    :target {
        scroll-margin-top: 233px;
    }

    .main {
        margin-top: 233px;
    }

    .section {
        padding: 30px 20px;
    }

    .section-title {
        width: 100%;
        text-align: center;
    }

    /* Header component */

    .header {
        grid-template-rows: auto auto;
        grid-template-columns: 70px auto auto;
        padding: 20px;
    }

    .header__main-title {
        grid-column: 1 / 4;
        padding: 20px;
        font-size: 1.2rem;
        width: 100%;
    }

    .header__main-title h2 {
        font-size: 1.2rem;
    }

    .header__networking {
        width: 100%;
        grid-column: 2 / 4;
    }

    .header__networking ul {
        column-gap: unset;
        justify-content: space-around;
    }

    .header__nav ul {
        flex-direction: column;
        column-gap: unset;
        row-gap: 10px;
    }

    .burger-menu {
        display: block;
        line-height: 1rem;
        grid-row: 1 / 2;
        grid-column: 1 / 2;
        background-color: rgba(255, 255, 255, 0.6);
        border: 2px solid var(--primary-color);
        border-radius: 10px;
        padding: 15px;
        font-size: 1.5rem;
        width: fit-content;
        color: var(--primary-color);
    }

    /* WhoAmI component */

    .introduction {
        flex-direction: column;
        column-gap: unset;
        row-gap: 20px;
    }

    .introduction__profile-pic {
        width: 50%;
    }

    .introduction__profile-pic img {
        width: 100%;
        height: auto;
    }

    /* ProjectView component */

    .project__image {
        width: 100%;
    }

    .project__details {
        align-items: center;
    }

    .project__details a {
        max-width: 300px;
    }

    /* MySkillsSection component */

    .skills-container {
        grid-template-columns: repeat(2, 1fr);
    }

    /* ContactSection component */

    .contact-methods {
        align-items: unset;
    }

    .contact-methods a {
        align-self: center;
    }

    .message-form h4 {
        font-size: 1.25rem;
    }
}

